@@ -274,7 +274,11 @@ module StateMachine
       # Loads additional files specific to ActiveRecord
       def self.extended(base) #:nodoc:
         require 'state_machine/integrations/active_record/observer'
-        I18n.load_path << "#{File.dirname(__FILE__)}/active_record/locale.rb" if Object.const_defined?(:I18n)
+        
+        if Object.const_defined?(:I18n)
+          locale = "#{File.dirname(__FILE__)}/active_record/locale.rb"
+          I18n.load_path << locale unless I18n.load_path.include?(locale)
+        end
       end
       
       # Adds a validation error to the given object 
